fix main button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ header nav ul li a {
 
 .button-1 {
 	position: absolute;
-  	top: 70%;
+  	top: 50%;
   	left: 50%;
   	transform: translate(-50%, -50%);
   	-ms-transform: translate(-50%, -50%);
